update homePage and more stuff